--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -1,13 +1,42 @@
+#titles
 main.page=Главная страница
-bot.name=AdvisorForTripBot
+bot.name=Advisor For Trip Bot
+all.countries=Все страны
+all.cities=Все города
+new.country=Новая страна
+new.city=Новый город
+
+
+#headers
+add.country=Добавить страну
+add.city=Добавить город
+
+
 country=Страна
 countries=Страны
 city=Город
+capital=Столица
 cities=Города
 currency=Валюта
-capital=Столица
+id=№
+name=Название
+true=Дa
+false=Нет
+description=Описание
+abbreviation=Сокращение
+action=Действие
 edit=Редактировать
 add=Добавить
 delete=Удалить
-all.countries=Все страны
-all.cities=Все города
+is.capital=Является столицей
+
+#errors
+name.error=Введите имя
+name.unique.error=Есть город с таким именем
+description.error=Введите описание
+error=Ошибка...Упс
+
+#buttons
+main.page.button=На главную
+
+
