--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -39,4 +39,12 @@ error=Ошибка...Упс
 #buttons
 main.page.button=На главную
 
+#footer
+name.full=Serov Nikita Vadimovich
+name.br=Mikita Serou
+github=MikitaSerou
+mail=Mikita.Serou@gmail.com
+phone=+375(29)105-16-07
+telegram=@MikitaSerou
+
 
