--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -1,17 +1,22 @@
+###################################
 #titles
+###################################
 main.page=Главная страница
 bot.name=Advisor For Trip Bot
 all.countries=Все страны
 all.cities=Все города
 new.country=Новая страна
 new.city=Новый город
-
-
+###################################
 #headers
+###################################
 add.country=Добавить страну
 add.city=Добавить город
-
-
+edit.city=Редактировать город
+edit.country=Редактировать страну
+###################################
+#strings
+###################################
 country=Страна
 countries=Страны
 city=Город
@@ -25,26 +30,29 @@ false=Нет
 description=Описание
 abbreviation=Сокращение
 action=Действие
-edit=Редактировать
-add=Добавить
-delete=Удалить
 is.capital=Является столицей
-
+new.name=Новое имя
+new.description=Новое описание
+###################################
+#buttons
+###################################
+main.page.button=На главную
+edit.button=Редактировать
+add.button=Добавить
+delete.button=Удалить
+###################################
 #errors
+###################################
 name.error=Введите имя
 name.unique.error=Есть город с таким именем
 description.error=Введите описание
 error=Ошибка...Упс
-
-#buttons
-main.page.button=На главную
-
+###################################
 #footer
+###################################
 name.full=Serov Nikita Vadimovich
 name.br=Mikita Serou
 github=MikitaSerou
 mail=Mikita.Serou@gmail.com
 phone=+375(29)105-16-07
 telegram=@MikitaSerou
-
-
