Forms for editing  of entities. Included all currencies, UI changes, validation

--- a/src/main/resources/message_ru.properties
+++ b/src/main/resources/message_ru.properties
@@ -28,7 +28,7 @@ name=Название
 true=Дa
 false=Нет
 description=Описание
-abbreviation=Сокращение
+abbreviation=Сокращение (ISO)
 action=Действие
 is.capital=Является столицей
 ###################################
