--- a/src/main/resources/message_ru.properties
+++ b/src/main/resources/message_ru.properties
@@ -21,6 +21,7 @@ country=Страна
 countries=Страны
 city=Город
 capital=Столица
+city.list=Список городов
 cities=Города
 currency=Валюта
 id=№
@@ -31,6 +32,12 @@ description=Описание
 abbreviation=Сокращение (ISO)
 action=Действие
 is.capital=Является столицей
+new.name=Новое имя
+new.description=Новое описание
+city.search=Какой город вы хотите найти?
+city.name.found=Города с именем
+or.similar=, или подобные:
+try.again=Попробуйте еще раз:
 ###################################
 #buttons
 ###################################
@@ -38,6 +45,7 @@ main.page.button=На главную
 edit.button=Редактировать
 add.button=Добавить
 delete.button=Удалить
+search=Найти
 ###################################
 #errors
 ###################################
@@ -45,6 +53,7 @@ name.error=Введите имя
 name.unique.error=Есть город с таким именем
 description.error=Введите описание
 error=Ошибка...Упс
+no.cities.found.error=Не найдено похожих городов с таким названием
 ###################################
 #footer
 ###################################
