--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -1,65 +1,66 @@
-###################################
+##################################
 #titles
-###################################
-main.page=Главная страница
-bot.name=Advisor For Trip Bot
-all.countries=Все страны
-all.cities=Все города
-new.country=Новая страна
-new.city=Новый город
-###################################
+##################################
+main.page = Main Page
+bot.name = Trip Bot advisor
+all.countries = All Countries
+all.cities = All cities
+new.country = New Country
+new.city = New City
+##################################
 #headers
-###################################
-add.country=Добавить страну
-add.city=Добавить город
-edit.city=Редактировать город
-edit.country=Редактировать страну
-###################################
+##################################
+add.country = Add country
+add.city = Add City
+edit.city = Edit City
+edit.country = Edit Country
+##################################
 #strings
-###################################
-country=Страна
-countries=Страны
-city=Город
-capital=Столица
-city.list=Список городов
-cities=Города
-currency=Валюта
-id=№
-name=Название
-true=Дa
-false=Нет
-description=Описание
-abbreviation=Сокращение (ISO)
-action=Действие
-is.capital=Является столицей
-new.name=Новое имя
-new.description=Новое описание
-city.search=Какой город вы хотите найти?
-city.name.found=Города с именем
-or.similar=, или подобные:
-try.again=Попробуйте еще раз:
-###################################
+##################################
+country = Country
+countries = Countries
+city= City
+capital = Capital
+city.list = City List
+City = Cities
+currency = Currency
+id = №
+name = Name
+true = Yes
+false = No
+description = Description
+abbreviation = Abbreviation (ISO)
+action = Action
+is.capital = Is the capital
+new.name = New Name
+new.description = New description
+city.search = Which city do you want to find?
+city.name.found = Named Cities
+or.similar =, or similar:
+try.again = Try again:
+##################################
 #buttons
-###################################
-main.page.button=На главную
-edit.button=Редактировать
-add.button=Добавить
-delete.button=Удалить
-search=Найти
-###################################
-#errors
-###################################
-name.error=Введите имя
-name.unique.error=Есть город с таким именем
-description.error=Введите описание
-error=Ошибка...Упс
-no.cities.found.error=Не найдено похожих городов с таким названием
-###################################
-#footer
-###################################
-name.full=Serov Nikita Vadimovich
-name.br=Mikita Serou
-github=MikitaSerou
+##################################
+main.page.button = Home
+edit.button = Edit
+add.button = Add
+delete.button = Delete
+search = Find
+logout.button = Logout
+##################################
+# errors
+##################################
+name.error = Please enter a name
+name.unique.error = There is a city with this name
+description.error = Please enter a description
+error = Error ... Oops
+no.cities.found.error = No similar cities found with the same name
+##################################
+# footer
+##################################
+name.full = Serov Nikita Vadimovich
+name.br = Nikita Serou
+github = MikitaSerou
 mail=Mikita.Serou@gmail.com
-phone=+375(29)105-16-07
-telegram=@MikitaSerou
+phone = + 375(29)105-16-07
+telegram = @MikitaSerou
