--- a/src/main/resources/message_ru.properties
+++ b/src/main/resources/message_ru.properties
@@ -38,6 +38,7 @@ main.page.button=На главную
 edit.button=Редактировать
 add.button=Добавить
 delete.button=Удалить
+logout.button=Выйти
 ###################################
 #errors
 ###################################
